white house 2 references removed from 404 and 500

--- a/public/404.html
+++ b/public/404.html
@@ -25,7 +25,7 @@ a:hover {
 </head>
 <body>
 	<div align="center">
-	<a href="/"><img src="/images/wh2-logo-medium.png" width="350" height="238" border="0"></a>
+	<a href="/">Adhocratie home</a>
 	<p>
 	Whoops!  That page isn't here anymore.
 	</p>
