--- a/public/500.html
+++ b/public/500.html
@@ -25,16 +25,16 @@ a:hover {
 </head>
 <body>
 	<div align="center">
-	<a href="/"><img src="/images/wh2-logo-medium.png" width="350" height="238" border="0"></a>
-	<p>
-		Whoops!  There was an error on the server.
-		</p>
-		<p>
-			Jim's getting an email now about it, it could be a bug, or just a temporary glitch.
-		</p>
-		<p>
-		If this happened while trying to create a new account, you may be able to fix the problem by <a href="/sessions/destroy">clicking here</a> and then <a href="/signup">starting over</a>.
-	</p>
+	  <a href="/">Adhocratie home</a>
+	    <p>
+              Whoops!  There was an error on the server.
+	    </p>
+            <p>
+              We're getting an email about it, it could be a bug, or just a temporary glitch.
+	    </p>
+	    <p>
+	      If this happened while trying to create a new account, you may be able to fix the problem by <a href="/sessions/destroy">clicking here</a> and then <a href="/signup">starting over</a>.
+	    </p>
 	</div>
 </body>
 </html>
